# AI-POWERED-TRADING-TERMINAL

./: ARCHITECTURE.md  COMPLETE_ANALYSIS.md  CONTRACTS.md  PRODUCTION_SETUP.md  README.md  package-lock.json  prompt.md
.agents/rules/: project-analyze.md
agent/predictive/: Cargo.toml  Dockerfile  build.rs
agent/predictive/src/: engine.rs  main.rs  math.rs  proto.rs  ws_server.rs
agent/quant-rag/: Cargo.toml  Dockerfile  build.rs
agent/quant-rag/src/: engine.rs  llm.rs  main.rs  proto.rs  ws_server.rs
agent/sentiment/: .gitkeep  package-lock.json  package.json
agent/sentiment/src/: analyzer.js  cache.js  claude.js  fetcher.js  index.js  kafkaProducer.js  protoLoader.js
agent/technical/: .gitkeep  Cargo.toml  build.rs
agent/technical/src/: indicators.rs  kafka_consumer.rs  kafka_producer.rs  main.rs  proto.rs  signal_engine.rs  state.rs
aggregator/: Cargo.toml  Dockerfile  build.rs  instruments_cache.json
aggregator/src/: consumer.rs  engine.rs  kafka_producer.rs  kite_api.rs  main.rs  ohlc_server.rs  proto.rs  state.rs  ws_server.rs
aggregator/src/quant/: mod.rs  patterns.rs  strategies.rs
alpha-terminal/: Cargo.toml  Dockerfile  build.rs
alpha-terminal/src/: consumer.rs  engine.rs  kafka_producer.rs  main.rs  proto.rs  ws_server.rs
auth/: .gitignore  package-lock.json  package.json
auth/migrations/: 001_identity_vault.sql  002_refresh_tokens.sql  003_financial_persona.sql  004_kyc_state_machine.sql  005_billing_schema.sql
auth/prisma/: schema.prisma
auth/src/: config.js  db.js  index.js  redis.client.js
auth/src/__tests__/: billing.service.test.js  billing.webhook.test.js  integration_test.js
auth/src/adapters/kyc/: aadhaar.adapter.js  pan.adapter.js
auth/src/config/: billing.catalog.js
auth/src/controllers/: auth.controller.js  billing.controller.js  billing.webhook.controller.js  kyc.controller.js  webhook.controller.js
auth/src/crypto/: encryption.js  hasher.js  hasher.test.js  jwt.provider.js
auth/src/errors/: index.js
auth/src/middleware/: auth.guard.js  billing.guard.js  blacklist.js  error.handler.js  kyc.guard.js  mfa.guard.js  owner.guard.js
auth/src/repository/: billing.repository.js  mfa.repository.js  token.repository.js  user.repository.js  user_profile.repository.js
auth/src/routes/: auth.routes.js  billing.routes.js  kyc.routes.js  trade.routes.js  webhook.routes.js
auth/src/services/: auth.service.js  billing.service.js  billing.sync.js  mfa.service.js  oauth.service.js  s3.service.js  token.service.js
auth/src/utils/: circuit-breaker.js  kyc.state.js
frontend/: next.config.ts  playwright.config.ts
frontend/playwright-report/: index.html
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: db.rs  lib.rs
frontend/src-tauri/src/commands/: charts.rs  deep_quant.rs  instruments.rs  mod.rs  security.rs  sentiment.rs  ticker.rs
frontend/src-tauri/src/quants/: mod.rs  patterns.rs  radar.rs  strategies.rs
frontend/src-tauri/src/services/: audit_logger.rs  history_loader.rs  instrument_master.rs  live_bridges.rs  llm.rs  mod.rs
frontend/src-tauri/tests/: api_tests.rs  quant_tests.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/kite/historical/: route.ts
frontend/src/app/api/kite/quote/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: AlphaPredictiveChart.tsx  OrderBook.tsx  SystemConsole.tsx  TradingChart.tsx
frontend/src/components/chart/: DrawingOverlays.tsx  ToolMenu.tsx
frontend/src/components/layout/: TerminalLayout.tsx
frontend/src/components/layouts/: IntradayLayout.tsx  InvestorLayout.tsx  SwingLayout.tsx
frontend/src/components/panel/: AIPanel.tsx  AgentStatusPanel.tsx  LeftPanel.tsx  LiveFeedPanel.tsx  NetworkMetrics.tsx  OrderExecutionPanel.tsx  WatchlistPanel.tsx
frontend/src/components/quants/: ActivePositions.tsx  ConsensusBoard.tsx  DeepQuantPanel.tsx  QuantRadar.tsx
frontend/src/components/settings/: SecurityVault.tsx
frontend/src/hooks/: useChartDataSync.ts  useChartInit.ts  useDrawingEngine.ts  useDrawingInteraction.ts  useDrawingRenderer.ts  useFibZoneOverlay.ts  useHistoricalData.ts  useMacroIndicators.ts  useMultiTimeframeTrend.ts  useTauriLiveData.ts
frontend/src/store/: useChartUIStore.ts  useQuantStore.ts  useTradeStore.ts
frontend/src/utils/: chartAggregation.ts  chartTypes.ts
frontend/tests/: e2e.spec.ts
graphify-out/: .graphify_analysis.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
ingestion/: .gitkeep  Cargo.toml  Dockerfile  build.rs
ingestion/src/: kafka_producer.rs  kite_auth.rs  kite_client.rs  main.rs  parser.rs  proto.rs  questdb_sink.rs  questdb_writer.rs  types.rs
scripts/linux/: auth.sh  backend.sh  frontend.sh  infra.sh  stop_infra.sh
scripts/powershell/: auth.ps1  backend.ps1  frontend.ps1  infra.ps1  start_system.ps1  stop-infra.ps1
scripts/powershell/auth/keys/: private.pem  public.pem
shared_protos/: .gitkeep  decision.proto  predictive_data.proto
tools/load_tester/src/: main.rs
