[package]
name = "predictive"
version = "0.1.0"
edition = "2024"

[features]
default = ["kafka"]
kafka = ["rdkafka"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
prost = "0.12"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
serde_json = "1.0"
tokio-tungstenite = "0.20"

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"
