[package]
name = "quant-rag"
version = "0.1.0"
edition = "2021"
description = "Serverless AI insights agent: consumes market anomalies via Kafka, generates LLM-powered analysis using DeepSeek v4 Pro, and broadcasts insights to the Edge Terminal."

# ===========================================================================
# Runtime Dependencies
# ===========================================================================
[dependencies]

# Async runtime — full feature set (io, time, sync, macros, rt-multi-thread)
tokio = { version = "1", features = ["full"] }

# HTTP client — JSON serialization + rustls for TLS (no OpenSSL dependency)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment variable loader — reads .env file at runtime
dotenvy = "0.15"

# Structured logging
log = "0.4"
env_logger = "0.11"

# Kafka consumer/producer — builds librdkafka from source via CMake.
# Gated behind the 'kafka' feature so `cargo check --no-default-features` works
# on Windows without requiring CMake. Enabled by default for production.
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }

# Async stream combinators — StreamExt for iterating rdkafka::StreamConsumer
futures-util = "0.3"

# Protobuf deserialization — decodes incoming OHLCCandle, encodes MarketInsight
prost = "0.12"

# WebSocket server — broadcasts JSON insight payloads to connected clients on port 8083
tokio-tungstenite = "0.20"

# ===========================================================================
# Build-time Dependencies (proto compilation)
# ===========================================================================
[build-dependencies]

# Compiles .proto files in shared_protos/ → Rust structs during `cargo build`
prost-build = "0.12"

# Ships a precompiled protoc binary — eliminates the requirement for a system
# protoc install. Sets PROTOC env var in build.rs so prost-build finds it.
protoc-bin-vendored = "3"

# ===========================================================================
# Feature Flags
# ===========================================================================
[features]
# 'kafka' is on by default — production builds compile rdkafka via CMake.
# Use `cargo check --no-default-features` on Windows (no CMake) to type-check
# all non-Kafka modules without triggering the CMake build.
default = ["kafka"]
kafka = ["dep:rdkafka"]
