[package]
name = "technical"
version = "0.1.0"
edition = "2021"
description = "Quantitative math engine: Kafka tick consumer → indicator computation → TechSignal Protobuf producer"

# ===========================================================================
# Runtime Dependencies
# ===========================================================================
[dependencies]

# Async runtime — full feature set (io, time, sync, macros, rt-multi-thread)
tokio = { version = "1", features = ["full"] }

# Kafka consumer — builds librdkafka from source via CMake.
# Gated behind the 'kafka' feature so `cargo check --no-default-features` works
# on Windows without requiring CMake. Enabled by default for production.
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }

# Protobuf deserialization — decodes Tick, encodes TechSignal
prost = "0.12"

# Environment variable loader — reads .env file at runtime
dotenvy = "0.15"

# Rust Technical Analysis library — EMA, RSI, VWAP, Bollinger Bands, etc.
ta = "0.5"

# Async stream combinators — StreamExt for iterating rdkafka::StreamConsumer
futures-util = "0.3"

# Structured logging
log = "0.4"
env_logger = "0.10"

# ===========================================================================
# Build-time Dependencies (proto compilation)
# ===========================================================================
[build-dependencies]

# Compiles .proto files in shared_protos/ → Rust structs during `cargo build`
prost-build = "0.12"

# Ships a precompiled protoc binary — eliminates the requirement for a system
# protoc install. Sets PROTOC env var in build.rs so prost-build finds it.
protoc-bin-vendored = "3"

# ===========================================================================
# Feature Flags
# ===========================================================================
[features]
# 'kafka' is on by default — production builds compile rdkafka via CMake.
# Use `cargo check --no-default-features` on Windows (no CMake) to type-check
# all non-Kafka modules without triggering the CMake build.
default = ["kafka"]
kafka = ["dep:rdkafka"]
